--- a/_posts/2017-11-07-2-2.md
+++ b/_posts/2017-11-07-2-2.md
@@ -8,7 +8,7 @@ subtitle:   "陈越 何钦铭"
 
 date:       2017-11-07 12:00:00
 
-author:     "王晗"
+author:     "Wanghan"
 
 header-img: "img/kuiba01-2017-10-29.jpg"
 
