--- a/_posts/第5节_光栅化.md
+++ b/_posts/第5节_光栅化.md
@@ -1,3 +1,22 @@
+---
+
+layout:     post
+
+title:      "第5节 光栅化"
+
+subtitle:   "Games101"
+
+date:       2022-2-04 12:00:00
+
+author:     "Wanghan"
+
+header-img: "img/kuiba01-2017-10-29.jpg"
+
+tags:
+
+    - 计算机图形学
+
+---
 ## 光栅化
 
 ### 透视投影
